# llm-rag-app

./: .gitignore  README.md  app.py  pyproject.toml
llm_rag/: __init__.py  base.py  rag.py
llm_rag/modules/: db.py  ingestion.py  query.py  retriver.py
views/: homepage.py
views/components/: callbacks.py  chat.py  sidebar.py
